--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -130,6 +130,17 @@ jobs:
         image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
         format: 'sarif'
         output: 'trivy-results.sarif'
+        exit-code: '0'
+    
+    - name: Check if SARIF file exists
+      run: |
+        if [ -f "trivy-results.sarif" ]; then
+          echo "SARIF file exists"
+          ls -la trivy-results.sarif
+        else
+          echo "SARIF file not found, creating empty SARIF file"
+          echo '{"version":"2.1.0","$schema":"https://raw.githubusercontent.com/oasis-tcs/sarif-spec/master/Schemata/sarif-schema-2.1.0.json","runs":[{"tool":{"driver":{"name":"Trivy","version":"unknown"}},"results":[]}]}' > trivy-results.sarif
+        fi
     
     - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v3
